<resources>
    <string name="app_name">Textosaurus Rex</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="attach_image">Attach Image</string>
    <string name="delete_messages">Delete Messages</string>
    <string name="type_a_message">Type a message</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="channel_name">textosaurusrex</string>
    <string name="channel_description">SMS notification channel for Textosaurus Rex</string>
    <string name="set_as_default">Set as default SMS application?</string>
    <string name="set_default">SET DEFAULT</string>
    <string name="new_message">New Message</string>
    <string name="recipient">Recipient</string>
    <string name="recipient_title">%1$s and 1 other</string>
    <string name="recipients_title">%1$s and %2$d others</string>
    <string name="remove_recipient_button">Remove Recipient Button</string>
    <string name="duplicate_recipient">Duplicate recipient</string>
    <string name="select">Select</string>
    <string name="unknown">Unknown</string>
    <string name="forward_message">Forward Message</string>
    <string name="copy_message">Copy Message Text</string>
    <string name="message_text">Message Text</string>
    <string name="call">Call</string>
    <string name="view_contact">View Contact</string>
    <string name="delete_message_thread">Delete Message Thread</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_message">Delete the selected message?</string>
    <string name="delete_selected_messages">Delete the %1$d selected messages?</string>
    <string name="delete_selected_thread">Delete the selected message thread?</string>
    <string name="delete_selected_threads">Delete the %1$d selected message threads?</string>
    <string name="delete_entire_thread">Delete entire message thread?</string>
    <string name="colon_label">%1$s: %2$s</string>
</resources>
