<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/conversation_bubble"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="SpUsage">

    <TextView
        android:id="@+id/txtDeleteHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_messages"
        android:textColor="#000000"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteButton"
        app:layout_constraintTop_toBottomOf="@id/txtDeleteHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDeleteHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>