<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivitySMS">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/requestDefaultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/conversation_bubble"
        android:elevation="4dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toTopOf="@id/messageListView"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtSetDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_as_default"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btnSetDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_default"
            android:textSize="26sp"
            android:layout_margin="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:background="@drawable/button_selector"
            app:layout_constraintTop_toBottomOf="@id/txtSetDefault"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/messageListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:stackFromBottom="true"
        android:divider="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@layout/item_message_user"
        app:layout_constraintTop_toBottomOf="@id/requestDefaultLayout"
        app:layout_constraintBottom_toTopOf="@id/inputLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sendButton"
            android:layout_margin="5dp"
            android:background="@drawable/text_edit_bubble"
            android:elevation="2dp">

            <ImageButton
                android:id="@+id/photoPickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_camera_alt_gray_24dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/messageEditText"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/attach_image" />

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@id/photoPickerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:inputType="textCapSentences|textMultiLine"
                android:background="@android:color/transparent"
                android:hint="@string/type_a_message"
                tools:ignore="Autofill,LabelFor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:enabled="false"
            android:elevation="4dp"
            android:background="@drawable/send_button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/send_button_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toTopOf="@id/inputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
